# Beatrix-a-Arquivista

./: .gitignore  DEVELOPER.md  LICENSE  README.md  USAGE.md  beatrix_example.json  main.py  monitor.py  pyproject.toml  requeriments.txt
modulos/: arquivos.py  gerar_nfse.py  nota.py  outlook_connector.py  pipeline.py  utils.py  xml_extrator.py
modulos/extratores/: base.py  bpe.py  cte.py  cte_os.py  mdfe.py  nfce.py  nfe.py  nfse.py
modulos/geradores/: pdf_generator.py
